<resources>

    <string name="app_name">AstroLog</string>
    <string name="app_description">Astronomy logging tool to register your observing sessions.</string>

    <!-- Main -->
    <string name="title_activity_main">Astrolog - Sessions list</string>
    <string name="message_done">Done!</string>
    <string name="message_canceled">Canceled</string>
    <string name="message_unknow_requestCode">Unknown requestCode. Try it again</string>

    <!-- String space for menu -->
    <string name="menu_settings">Settings</string>
    <string name="add_session">Add session</string>

    <!-- ListSessions -->
    <string name="summary_example">3 ses. 20 obj.</string>
    <string name="title_activity_edit_session">Session details</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="title_activity_list_sessions">Registered sessions</string>
    <plurals name="numberOfObservations">
        <item quantity="one">%d object</item>
        <item quantity="other">%d objects</item>
    </plurals>
    <plurals name="numberOfSessions">
        <item quantity="one">&#160;in %d session</item>
        <item quantity="other">&#160;in %d sessions</item>
    </plurals>
    <string name="at">&#160;at&#160;</string>

    
    <!-- EditSession -->
    <string name="error_title_length_0">You must enter a title</string>
    <string name="error_location_length_0">You must enter a location</string>
    <string name="pick_date">Date</string>
    <string name="title_activity_list_observations">Session details</string>

    <!-- ListObservations -->
    <string name="add_observation">Add observation</string> 
    <string name="edit_session">Edit Session</string>
    <string name="remove_session">Remove session</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="delete_session_warning">Are you sure you want to delete session? <br/>(All observations will be lost)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    

    <!-- EditObservations -->
    <string name="title_activity_edit_observations">Observation details</string>
    <string name="date_time">Date/Time</string>
    <string name="local">Local: </string>
    <string name="ut">UT: </string>
    <string name="pick_time">Time</string>
    <string name="object_id">Object name/ID</string>
    <string name="object_id_hint">NGC457 or M27</string>
    <string name="telescope">Telescope</string>
    <string name="eyepiece">Eyepiece</string>
    <string name="barlow">Barlow</string>
    <string name="seeing">Seeing</string>
    <string name="rate">Rate object</string>
    <string name="date_time_test_st">xx/xx/xxxx - xx:xx</string>
    <string name="remove_observation">Remove observation</string>
    <string name="error_name_required">You must enter an object id or name</string>

    <plurals name="numberOfObjects">
        <item quantity="one">%d object observed</item>
        <item quantity="other">%d objects observed</item>
    </plurals>

</resources>
